--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -12,10 +12,10 @@
 #
 # For more information on GitHub Actions for Azure, refer to https://github.com/Azure/Actions
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       # - master
 
 env:
   AZURE_WEBAPP_NAME: foospower    # set this to your application's name
