--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,8 +1,8 @@
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on:
-  push:
-    branches: [ master ]
+# on:
+#   push:
+#     # branches: [ master ]
 
 name: Build and Publish Front End
 jobs:
