--- a/.github/workflows/master_foospower-api.yml
+++ b/.github/workflows/master_foospower-api.yml
@@ -3,10 +3,10 @@
 
 name: Build and deploy Node.js app to Azure Web App - foospower-api
 
-on:
-  push:
-    branches:
-      - masterrrr
+# on:
+#   push:
+#     branches:
+#       - masterrrr
  
 jobs:
   build-and-deploy:
